--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>My Cool Website</title>
-   </head>
-   <body>
-      <h1>Welcome to my website! </h1>
-      <p>Hello World!</p>
-   </body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
