--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
     <title>Parallax Template - uplusion23</title>
     <script src="smooth-scroll.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <link href='style.css' rel='stylesheet' type='text/css'>
