--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Parallax Template - uplusion23</title>
+    <title>Lifelong Learning LLC</title>
     <script src="smooth-scroll.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,8 +18,7 @@
     </div>
     <div class="parallax p1" id="section-1">
       <hgroup>
-        <h1>Hello.</h1>
-        <h2>I’m a startup.</h2>
+        <h1>Welcome</h1>
       </hgroup>
     </div>
     <div class="row">
@@ -38,8 +37,8 @@
     </div>
     <div class="parallax p2" id="section-2">
       <hgroup>
-        <h1>Well</h1>
-        <h2>This is some bold info!</h2>
+        <h1>Requirements</h1>
+        <h2>Learn about what it takes</h2>
       </hgroup>
     </div>
     <div class="row">
@@ -56,21 +55,33 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac nibh dolor. Cras rutrum molestie ligula posuere hendrerit. Donec luctus vitae elit in gravida. Duis in viverra nunc. Nunc et metus blandit, blandit quam in, laoreet mi. In vitae mauris sit amet tellus dictum rhoncus malesuada non arcu. Ut lacus lacus, dignissim at commodo id, dapibus sed felis. Cras in nunc id est lobortis euismod. Sed egestas nulla et augue sagittis lacinia. Quisque finibus bibendum risus, vitae accumsan ante mollis ac. Aliquam fermentum, mauris eu gravida dictum, tortor risus finibus nibh, in tincidunt velit tortor vehicula mi.</p>
       </div>
     </div>
-    <div class="parallax p3">
+    <div class="parallax p3" id="section-3">
       <hgroup>
-        <h1>Well</h1>
-        <h2>This is some bold info!</h2>
+        <h1>Program</h1>
+        <h2>Learn about the program</h2>
       </hgroup>
     </div>
+    <div class="row">
+      <div class="col-3">
+        <h1>First Section Col1</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam cursus maximus quam et dignissim. Praesent felis arcu, euismod et ullamcorper ut, condimentum ut ante. Vestibulum vel libero commodo, aliquam libero eu, gravida arcu. Proin scelerisque faucibus ligula quis efficitur. Donec at sollicitudin purus, suscipit tempus augue. Sed imperdiet volutpat sapien at hendrerit. Mauris egestas ex a quam tincidunt gravida. Quisque interdum tempor lacinia. Nulla eget varius purus. Integer non sollicitudin dui. Phasellus sem turpis, maximus in auctor vulputate, porta id nunc.</p>
+      </div>
+      <div class="col-3">
+        <h1>First Section Col2</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet est id leo facilisis, quis egestas erat vehicula. Aenean nec facilisis leo, et tristique lorem. Aliquam porttitor, elit ac ornare lacinia, sapien augue sagittis dolor, tempor ultricies lorem arcu et ante. Nulla facilisi. Praesent facilisis lacus at blandit maximus. Ut at libero nisi. Cras eu augue tellus. Nam pretium eget nisi non viverra. Maecenas eget tincidunt nibh, vitae interdum dolor.</p>
+      </div>
+      <div class="col-3">
+        <h1>First Section Col3</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac nibh dolor. Cras rutrum molestie ligula posuere hendrerit. Donec luctus vitae elit in gravida. Duis in viverra nunc. Nunc et metus blandit, blandit quam in, laoreet mi. In vitae mauris sit amet tellus dictum rhoncus malesuada non arcu. Ut lacus lacus, dignissim at commodo id, dapibus sed felis. Cras in nunc id est lobortis euismod. Sed egestas nulla et augue sagittis lacinia. Quisque finibus bibendum risus, vitae accumsan ante mollis ac. Aliquam fermentum, mauris eu gravida dictum, tortor risus finibus nibh, in tincidunt velit tortor vehicula mi.</p>
+      </div>
+    </div>
     <footer>
-      <div class="row" id="section-3">
-        <div class="col-3">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum tortor ac dui malesuada, id molestie elit aliquam. Fusce laoreet nisl id tellus molestie mattis. Fusce vitae ante quis augue imperdiet rutrum a vitae purus. Etiam tincidunt enim id turpis varius, in condimentum elit.</p>
-        </div>
+      <div class="footer">
+          <p>Some kind of footer info/disclaimer</p>
       </div>
       <div class="footer-copyright">
         <div class="container">
-          © 2011-2015 uplusion23, All rights reserved.
+            © 2022 Lifelong Learning LLC, All rights reserved.
         </div>
       </div>
     </footer>
