--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <html>
   <head>
     <title>Lifelong Learning LLC</title>
-    <script src="smooth-scroll.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <div class="navbar">
+    <div class="navbar" style="position: fixed; top: 0;">
       <ul class="navbar-container">
         <li><a href="#" class="left-underline nav-button brand-logo">Brand Logo</a></li>
-        <li class="nav-item"><a href="#section-3" class="left-underline nav-button" data-scroll>Wallet</a></li>
-        <li class="nav-item"><a href="#section-2" class="left-underline nav-button" data-scroll>Pictures</a></li>
-        <li class="nav-item active"><a href="#section-1" class="left-underline nav-button" data-scroll>Home</a></li>
+        <li class="nav-item"><a href="#section-3" class="left-underline nav-button" data-scroll>Program</a></li>
+        <li class="nav-item"><a href="#section-2" class="left-underline nav-button" data-scroll>Requirements</a></li>
+        <li class="nav-item"><a href="#section-1" class="left-underline nav-button" data-scroll>About</a></li>
       </ul>
     </div>
     <div class="parallax p1" id="section-1">
       <hgroup>
-        <h1>Welcome</h1>
+        <h1>Program</h1>
+        <h2>What this program is about</h2>
       </hgroup>
     </div>
     <div class="row">
@@ -38,7 +39,7 @@
     <div class="parallax p2" id="section-2">
       <hgroup>
         <h1>Requirements</h1>
-        <h2>Learn about what it takes</h2>
+        <h2>What is needed to begin the program</h2>
       </hgroup>
     </div>
     <div class="row">
@@ -57,8 +58,8 @@
     </div>
     <div class="parallax p3" id="section-3">
       <hgroup>
-        <h1>Program</h1>
-        <h2>Learn about the program</h2>
+        <h1>About</h1>
+        <h2>Who I am</h2>
       </hgroup>
     </div>
     <div class="row">
@@ -85,5 +86,6 @@
         </div>
       </div>
     </footer>
+    <script src="nav-active-change-scroll.js"></script>
   </body>
 </html>
